fix(anvil recipe): 修复铁砧配方材料使用物品组时不能使用数量的问题